# gauss

./: .gitignore  Cargo.toml  LICENSE
benches/: BENCHMARKS.md  modular_arithmetic.rs  ntt.rs
notes/: bfv.md  hybrid_ksk.md  ntt.md  other.md
src/: ciphertext.rs  keys.rs  lib.rs  parameters.rs  utils.rs
src/core_crypto/: guassian_sampler.rs  matrix.rs  mod.rs  ntt.rs  num.rs  prime.rs  random.rs  ring.rs  rings_trait.rs
src/core_crypto/modulus/: barrett.rs  mod.rs  montgomery.rs  native_backend.rs  shoup.rs
src/core_crypto/num/: big_float.rs  impl_num.rs  mod.rs
src/core_crypto/traits/: align.rs  matrix.rs  mod.rs
src/schemes/: bfv.rs  hybrid_ksk.rs  mod.rs
src/schemes/bfv/: mod.rs  ops.rs
src/schemes/bfv/default_impl/: entities.rs  mod.rs
src/schemes/ckks/: mod.rs  ops.rs
src/schemes/ckks/default_impl/: entities.rs  mod.rs
src/schemes/hybrid_ksk/: mod.rs  ops.rs
src/utils/: convert.rs  mod.rs  test_utils.rs
