[package]
name = "gauss"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2.17"
itertools = "0.12.0"
rand = "0.8.5"
num-bigint = "0.4.4"
num-bigint-dig = { version = "0.8.4", features = ["prime"] }
aligned-vec = { version = "0.5", features = ["serde"] }
[dev-dependencies]
ndarray = "0.15.6"
num-bigint = { version = "0.4.4", features = ["rand"] }
criterion = { version = "0.5.1", features = ["html_reports"] }

# [[bench]]
# name = "modular_arithmetic"
# harness = false

[[bench]]
name = "ntt"
harness = false
